# ebpf_zemo

./: README.md  ebpf_embed_vibe_prompt(1).html  pyproject.toml  requirements.txt
ebpf_embed/: cli.py
ebpf_embed/data/: collect.py  generate_summaries.py  summaries.json
ebpf_embed/encoder/: fusion.py  semantic.py  structural.py
ebpf_embed/extractor/: fcfg.py  serializer.py  tokenizer.py
ebpf_embed/training/: train.py
ebpf_zemo.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
