[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "ebpf-zemo"
version = "0.1.0"
authors = [
  { name = "Alok", email = "alok@example.com" },
]
description = "Semantic Embedding Engine for eBPF Bytecode"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "networkx",
    "pyelftools",
    "matplotlib",
    "requests",
    "ollama",
    "sentence-transformers",
    "torch",
    "numpy",
    "scikit-learn",
    "umap-learn",
    "click",
    "pyyaml"
]

[project.scripts]
zemo = "ebpf_embed.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["ebpf_embed*"]
